# discord-helper-bot

./: .env.example  .eslintrc.json  .gitignore  .yarnrc.yml  Dockerfile  Makefile  README.md  config.ini  package.json  pyproject.toml  requirements.txt  tokens.json  tsconfig.json
bot/: main.py  web.py
discord_bot/: __main__.py  helpers.py  main.py  transaction_manager.py  user_manager.py  webserver.py
discord_bot/templates/: errors.html  index.html  logs.html
src/: config.ts  index.ts  register.ts
src/commands/: fund_eth.command.ts
