[tool.poetry]
name = "discord_bot"
version = "0.1.0"
description = ""
authors = ["Devs <devs@ithil.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
requests = "^2.28.1"
web3 = "^5.30.0"
py-cord = "^2.3.2"
Pillow = "^9.3.0"
python-dotenv = "^0.21.0"
transformers = "^4.25.1"

[tool.poetry.scripts]
discord_bot = "discord_bot.main:run_app"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
